# oneproxy

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  GITHUB_RELEASE.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  PHASE2_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  QUICKSTART.md  README.md  README.zh.md  RELEASE_NOTES.md  REVIEW_CHECKLIST.md  TECHNICAL_INVESTIGATION.md  build-release.bat  build.ps1  config-placeholder.json  download-singbox.bat  download-singbox.sh  go.mod  go.sum
.claude/: RETROSPECTIVE.md  plan.md
.github/workflows/: build.yml
.playwright-mcp/: page-2026-07-13T02-31-29-191Z.yml  page-2026-07-13T02-31-43-516Z.yml  page-2026-07-13T02-31-53-823Z.yml  page-2026-07-13T02-32-03-257Z.yml  page-2026-07-13T03-32-42-543Z.yml  page-2026-07-13T03-32-53-782Z.yml  page-2026-07-15T11-20-11-752Z.yml
cmd/oneproxy/: main.go
cmd/oneproxy-dll/: main.go
configs/: config.example.json
docs/: CROSS_PLATFORM.md
internal/config/: config.go  singbox.go  subscription.go
internal/logger/: logger.go
internal/proxy/: dns.go  health.go  manager.go
internal/ui/: tray.go
tools/: deploy-node.sh
trayapp/: CMakeLists.txt  gen_icons.py  i18n.h  installer.iss  main.cpp
